# ASI-convection

./: .gitignore  README.md  environment.yaml  pyproject.toml
notebooks/: figure01.ipynb  figure02.ipynb  figure03.ipynb  figure04.ipynb  figure05.ipynb  figure06.ipynb  figure07.ipynb  figure0809.ipynb  figureA1.ipynb  figureA2.ipynb  figureA3.ipynb
scripts/: calc_clwvi.py  calc_clwvi.sh  calc_mse_dp.py  calc_mse_e.py  calc_mse_e.sh  calc_mse_sfc.py  calc_mse_sfc.sh  calc_mse_sfc_ifs.py  calc_mse_sfc_ifs.sh  calc_sfc_bf.py  calc_sfc_bf.sh  calc_sfc_density.py  calc_sfc_density.sh  calc_sfcwind_conv.py  calc_sfcwind_conv.sh  calc_sfcwind_conv_comp.py  calc_sfcwind_conv_comp.sh  remap_var.py  remap_var.sh
src/: physics.py  preprocessing.py  variables.py
